syntax = "proto3";
package role.pb;

message UserConfig{
    string params = 1;
    bytes pubkeyBls = 2;
    bytes pubkeyG = 3;
    repeated bytes pubkeyU = 4;
    bytes prikeyBls = 5;
    bytes X = 6;
}

message UserBLS12Config{
    bytes pubkeyBls = 2;
    bytes pubkeyG = 3;
    repeated bytes pubkeyU = 4;
    repeated bytes pubkeyW = 5;
    bytes prikeyBls = 6;
    bytes X = 7;
}